Fix gap at the bottom of page links

--- a/_sass/others.scss
+++ b/_sass/others.scss
@@ -276,7 +276,7 @@ header {
 header div.nav_background {
     background: black;
     /* Manually adjusted if the header navigation gets taller/shorter */
-    height: 31px;
+    height: 28px;
 }
 
 nav {
